# ChangeLog for app-office/gnucash
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/gnucash/ChangeLog,v 1.267 2013/04/07 08:50:28 pacho Exp $

*gnucash-2.4.12 (07 Apr 2013)

  07 Apr 2013; Pacho Ramos <pacho@gentoo.org> +gnucash-2.4.12.ebuild,
  -gnucash-2.4.10.ebuild:
  Version bump, set libdbi* dependencies to versions I have just confirmed work
  for me (#455134 by step), drop old.

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gnucash-2.4.11-r1.ebuild:
  Stable for ppc, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gnucash-2.4.11-r1.ebuild:
  Stable for x86, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gnucash-2.4.11-r1.ebuild:
  Stable for amd64, wrt bug #458984

*gnucash-2.4.11-r1 (27 Oct 2012)

  27 Oct 2012; Pacho Ramos <pacho@gentoo.org> +gnucash-2.4.11-r1.ebuild,
  -gnucash-2.4.11.ebuild:
  Drop 'cxx' as that feature is experimental and not recommended by upstream,
  bug #438356 by Jordan Evens.

  19 Sep 2012; Pacho Ramos <pacho@gentoo.org> gnucash-2.4.10.ebuild,
  gnucash-2.4.11.ebuild:
  Fix RDEPEND on dev-db/libdbi-drivers, bug #435480 by Bernd Feige.

*gnucash-2.4.11 (15 Sep 2012)

  15 Sep 2012; Pacho Ramos <pacho@gentoo.org>
  +files/gnucash-2.4.11-potfiles-skip.patch, +gnucash-2.4.11.ebuild,
  -files/gnucash-2.4.7-python-detection.patch,
  -files/gnucash-2.4.8-python-detection.patch, -gnucash-2.4.8.ebuild:
  Version bump, drop old.

  24 May 2012; Samuli Suominen <ssuominen@gentoo.org> gnucash-2.4.10.ebuild:
  ppc stable wrt #410611

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> gnucash-2.4.8.ebuild,
  gnucash-2.4.10.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  29 Apr 2012; Markus Meier <maekke@gentoo.org> gnucash-2.4.10.ebuild:
  x86 stable, bug #410611

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> gnucash-2.4.10.ebuild:
  Stable for amd64, wrt bug #410611
