@@ -4,14 +4,16 @@ Hash: SHA256
 AUX gnucash-2.4.11-potfiles-skip.patch 7937 SHA256 7fa39d83e6eedd16474a416b381f1d330b47ca22a2329887bf1257850264af45 SHA512 6fbc02f6c0698a5551180efbd2516edfcfca795cc4dd7f310b25aa9ff4324594a046b881120c3b1ebb60232bbefacdffa20fccee8c38d05964fc00a43e7d9713 WHIRLPOOL af5a24f72c762ec8da232c68c442c733775d009bea92cacff222116a235a53791b57a07cec63424a54156d33b2f1b338d5dbd84bea1238a20f988bc4c0b4a8de
 DIST gnucash-2.4.11.tar.bz2 9408193 SHA256 93c3d66af8d75da66dad814cabeb35aac417018ccc98e833af93b2ab4d7b7761 SHA512 220d0097f39bc359b97da388bbbddb233c6bfb7070cb793ae3a2848e6895fc35891ac72178c8fdaf0e0ac9da730b22c2443783eb3b66a99746488ebf8cbcd41b WHIRLPOOL 1d298051cd59f0b13e5c074de73b29522eb61b4727088851dcb66d8c9a85e08f366d050294325e0a8b7e11b26bdbf784b301828222851fe080555bff82e5731c
 DIST gnucash-2.4.12.tar.bz2 9297994 SHA256 bdd106a9ca09484be8558769e559d905e0dc273766d4453e9ccf5fdfec6e88c7 SHA512 1d482e90472792d5ff264343dbf63e956ba5aa1739e943e54b73a3f32ad62d7263477d9a8a1c9c015c7fce48c2e24da1e44c99eb63d812e1178fc725b67ee9ae WHIRLPOOL 8216c8d582d2e45e801cdc49a38fde9402df85002e58732e33129c6a863c57d9095a76185b4d04664ebb828669788be5bf1a2fe56c6dac4eb08654a2e0eb7388
+DIST gnucash-2.4.13.tar.bz2 9400405 SHA256 f6025200eab90c098026310dc332272d922ce2d3a34fe926cc0c863c14009548 SHA512 805a98951dc2325db951c6435d6b84639d5f6f7f2dd82d97398520e9a0df859177826f8b3fde45710c03483be4e1b4995eb2a324de9609acd9c18472697fc046 WHIRLPOOL 5585eb2bf50a5db013f6583705a5164c050f7d14b9da34205e79c2b38846fea1c2808fed9cca26fff2a021c73585445ff47ed2f1e36bea6c90acf955ed1ffe8f
 EBUILD gnucash-2.4.11-r1.ebuild 3845 SHA256 75891ee97ac2129af3d5209f51bceaf7868ed7511ff9ed43c0f0f1bb0a82abe3 SHA512 0b856b209d132e9ef2519a91e5931efc10553921a6cefaa543acf07b1df30c7a378215c3efe4469c66eb2f75fa022d5e351b75b5951ade4ec775f688632eb295 WHIRLPOOL 63b429e830720756f0df10d8523da59cb9e556138ece5049db8bd1827d185a6748036310a77560500c96dff6be01a0d41f0ad1f3a6ab9a8e059a6ad11a1658d2
 EBUILD gnucash-2.4.12.ebuild 3251 SHA256 53ce7f8c553cead4671a6932ea23ebf1f936773c42b04e329577b9eec3c82807 SHA512 8c601d65482d25a970705209b561f0d0be49f45e8bbeb7a18bdb39c3021a1de0c289ef9b2355d06583e4d17e59b8fa30224123079a72ac49360a7e50407ba13f WHIRLPOOL 29bb2b782d9682ae2bde57d613c897efea6695e3c59a995f2fdf0c2120c6fb7b7c61b6f591779b39cb3bb02faaf727bd786d10e06b9fdae24b8c0a6dd4201fef
-MISC ChangeLog 38869 SHA256 d0cef8629c3313a153c74e72b30f304007b714e587300caf6b10348a3ac2a21d SHA512 92917fe383021fb46b8ee154a6f1d33a59a8e5eae60d2be22cba31cc937b629ab30b28c9155647c14cf21f97ba63283e1e1e82cca873842c3b4e4e8b7bd9c440 WHIRLPOOL 732b4bfd050d092898fbd75ebad0d05b240c96d554143de4fa08c0ddcae555e2b88afcb610380788f83ce47152e0703f0a0698887177628d0a3836c9a8d7840f
+EBUILD gnucash-2.4.13.ebuild 3328 SHA256 547740ea9e1b64daf61dcc32369d4cd87b6c475cdf8717d52b0c80ad4f6bae27 SHA512 4852aa50b5547dc5adfa0a79dac3d5bc03d818e72fdc0b2fd18347ab03cc087cb5631d383810bd8da97a9614e3d5daa30067822115edaefd26373c96161ed034 WHIRLPOOL 36c48d4a736a7cc0c460a2429a1b195a0b2b791078748455d58a9d4e13b26bee2224ba4e43e2c60f487f0d392775c2d51298411e9067761aac868ba31bcf96ea
+MISC ChangeLog 38986 SHA256 336cdf41d9f3b3a680feda3c207094cf1c853826c5ac3676361f1349f9d47497 SHA512 a6f9dcf8e3a4cdf635a9fc3de2e83cb1f750dad8356149a23b34b5ce8b50a76fbdc285f847c93be172feb185ef02d9dd2883f9ade35280fa468f4795ecf2d821 WHIRLPOOL 767feed3247eaee2c565ec0a51a525d9eb851477b48b4ff1e3b9c82ca325ba578a58b81aa6c8f3ddca3222cbb7f46aee40d9894e45f7b2096be3a98e699acafc
 MISC metadata.xml 535 SHA256 5696960b05fe025efabc8cffe84f7978a0a1ca23d04a9b0ec4a23b6aaefd0b28 SHA512 82fb3082c0da9bbcb5709b3995108c64bcbdfe27dbf1cdc9c41742fbb639ce1e43145ac3173d24a34ceff7786326df31e8c41d45f5e9e4f58afa148d7f74c007 WHIRLPOOL 5269d16ab092630af504a854da879b29c94699da200b9e85f3181bc1dba151f8483b3e216107922477e4cf7faee4bdd6131d074c7c4879a241788f7fe6ad0238
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlFhM1YACgkQCaWpQKGI+9TmDwCeI5NGGS7FPNss4EJIKqIQ5Dh9
-8ZQAoIiwsAdDEwihlbbD86M8R4xI4ufK
-=gx20
+iEUEAREIAAYFAlJxcg0ACgkQCaWpQKGI+9QdtQCXStnrhumPw1HrMlhGyvZf2cFq
+bgCeOX7V2o9dBAPWeRnUU5qlVN1cCPM=
+=JjUg
 -----END PGP SIGNATURE-----
