@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
+DEPEND=>=dev-libs/glib-2.32.0:2 >=dev-libs/popt-1.5 >=dev-libs/libxml2-2.5.10:2 >=dev-scheme/guile-1.8.3:12[deprecated,regex] dev-scheme/guile-www >=dev-scheme/slib-3.1.4 >=gnome-base/gconf-2:2 >=gnome-base/libgnomeui-2.4 >=gnome-base/libglade-2.4:2.0 gnome-base/libgnome-keyring media-libs/libart_lgpl >=sys-libs/zlib-1.1.4 >=x11-libs/gtk+-2.14:2 x11-libs/goffice:0.8[gnome] x11-libs/pango ofx? ( >=dev-libs/libofx-0.9.1 ) hbci? ( >=net-libs/aqbanking-5[gtk,ofx?] sys-libs/gwenhywfar[gtk] chipcard? ( sys-libs/libchipcard ) ) python? ( python_single_target_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] ) quotes? ( dev-perl/DateManip >=dev-perl/Finance-Quote-1.11 dev-perl/HTML-TableExtract ) webkit? ( net-libs/webkit-gtk:2 ) !webkit? ( >=gnome-extra/gtkhtml-3.16:3.14 ) sqlite? ( >=dev-db/libdbi-0.9.0 >=dev-db/libdbi-drivers-0.9.0[sqlite] ) postgres? ( dev-db/libdbi dev-db/libdbi-drivers[postgres] ) mysql? ( dev-db/libdbi dev-db/libdbi-drivers[mysql] ) >=app-text/scrollkeeper-0.3 virtual/pkgconfig dev-util/intltool gnome-base/gnome-common sys-devel/libtool app-arch/xz-utils >=sys-apps/sed-4
+DESCRIPTION=A personal finance manager
+EAPI=5
+HOMEPAGE=http://www.gnucash.org/
+IUSE=chipcard debug +doc hbci mysql ofx postgres python quotes sqlite webkit python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86
+LICENSE=GPL-2
+PDEPEND=doc? ( >=app-doc/gnucash-docs-2.2.0 )
+RDEPEND=>=dev-libs/glib-2.32.0:2 >=dev-libs/popt-1.5 >=dev-libs/libxml2-2.5.10:2 >=dev-scheme/guile-1.8.3:12[deprecated,regex] dev-scheme/guile-www >=dev-scheme/slib-3.1.4 >=gnome-base/gconf-2:2 >=gnome-base/libgnomeui-2.4 >=gnome-base/libglade-2.4:2.0 gnome-base/libgnome-keyring media-libs/libart_lgpl >=sys-libs/zlib-1.1.4 >=x11-libs/gtk+-2.14:2 x11-libs/goffice:0.8[gnome] x11-libs/pango ofx? ( >=dev-libs/libofx-0.9.1 ) hbci? ( >=net-libs/aqbanking-5[gtk,ofx?] sys-libs/gwenhywfar[gtk] chipcard? ( sys-libs/libchipcard ) ) python? ( python_single_target_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] ) quotes? ( dev-perl/DateManip >=dev-perl/Finance-Quote-1.11 dev-perl/HTML-TableExtract ) webkit? ( net-libs/webkit-gtk:2 ) !webkit? ( >=gnome-extra/gtkhtml-3.16:3.14 ) sqlite? ( >=dev-db/libdbi-0.9.0 >=dev-db/libdbi-drivers-0.9.0[sqlite] ) postgres? ( dev-db/libdbi dev-db/libdbi-drivers[postgres] ) mysql? ( dev-db/libdbi dev-db/libdbi-drivers[mysql] )
+SLOT=0
+SRC_URI=mirror://sourceforge/gnucash/gnucash-2.4.13.tar.bz2
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	774182647ff84c6a2365bbcd9635044c	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	python-single-r1	4d9f916e821994a2ccdbbcfc8ac225c9	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=192f92f4636ac7b83c0488e0ffd43a44
